# Impartial-Games

./: CMakeLists.txt  README.md  games.txt  main.cc  run.py
.github/workflows/: cmake.yml
lib/: chomp.h  game.h  game_factory.h  impartial_game.h  nim.h  play.h  player.h  ui.h  user_input_handler.h
src/: chomp.cc  game.cc  game_factory.cc  impartial_game.cc  nim.cc  play.cc  player.cc  ui.cc  user_input_handler.cc
test/: test_chomp.cc  test_game.cc  test_game_factory.cc  test_impartial_game.cc  test_nim.cc  test_play.cc  test_user_input_handler.cc
